<resources>
    <string name="app_name">Lokator bivših osuđenika</string>
    <string name="hint_email">Email*</string>
    <string name="hint_password">Lozinka*</string>
    <string name="btn_login">Uloguj se</string>
    <string name="btn_register">Registruj se</string>
    <string name="firstName">Ime</string>
    <string name="lastName">Prezime</string>
    <string name="email">Email</string>
    <string name="password">Lozinka</string>
    <string name="confirm_password">Potvrda lozinke</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="profile">Profil</string>
    <string name="settings">Podešavanja</string>
    <string name="convicts_list">Lista osuđenika</string>
    <string name="logout">Odjavi se</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="potvrdi">Potvrdi</string>
    <string name="sa_uvaj">Sačuvaj</string>
    <string name="potvrdi_lozinku">Potvrdi lozinku</string>
    <string name="nova_lozinka">Nova lozinka</string>
    <string name="stara_lozinka">Stara lozinka</string>

    <string name="sync_pref">Sync</string>
    <string name="sync_pref_summary">Get yor photos, videos, contacts, subscriptions etc. on all your devices.</string>

    <string name="pref_syncConnectionType">Sync Connection Type</string>
    <string name="pref_syncConnectionType_dialog_title">Perform Sync Using</string>
    <string name="pref_syncConnectionType_default_value">Wifi</string>
    <string name="pref_syncConnectionType_summary">Wifi</string>
    <string name="da">DA</string>
    <string name="ne">NE</string>
    <string name="defini_ite_interval_automatske_sinhronizacije">Definišite interval automatske sinhronizacije</string>
    <string name="defini_ite_radijus_udaljenosti_od_lokacije_gde_je_vi_en_osu_enik_za_koji_elite_da_primate_obave_tenja">Definišite radijus udaljenosti od lokacije gde je viđen osuđenik za koji želite da primate obaveštenja</string>
    <string name="omogu_i_pra_enje_lokacije">Omogući praćenje lokacije</string>
    <string name="ukoliko_su_obave_tenja_omogu_ena_dobija_ete_notifikaciju_svaki_put_kada_se_na_ete_u_neposrednoj_blizini_na_kojoj_je_nedavno_vi_en_biv_i_osu_enik">Ukoliko su obaveštenja omogućena, dobijaćete notifikaciju svaki put kada se nađete u neposrednoj blizini na kojoj je nedavno viđen bivši osuđenik</string>
    <string name="omogu_i_obave_tenja">Omogući obaveštenja</string>

    <string-array name="pref_syncConnectionType_entries">
        <item>Wifi</item>
        <item>Mobile Data</item>
        <item>Wifi/Mobile Data</item>
    </string-array>

    <string-array name="pref_syncConnectionType_values">
        <item>Wifi</item>
        <item>Mobile</item>
        <item>Wifi_Mobile</item>
    </string-array>


    <string name="tab_map">Mapa</string>
    <string name="tab_list">Lista</string>
    <string name="title_activity_list_of_ex_convictes">Lista osuđenika</string>

    <string name="krivicno_delo">Krivično delo</string>
    <string name="poslednji_put_vi_en_na_lokaciji">Poslednji put viđen na lokaciji:</string>
    <string name="sacuvaj">Sačuvaj</string>

    <string name="prijavi_novu_lokaciju">Prijavi novu lokaciju</string>
    <string name="unesite_lokaciju">Unesite lokaciju</string>
    <string name="komentar">Komentar</string>
    <string name="ime_i_prezime">Ime i prezime</string>
    <string name="nadimak_pseudonim">Nadimak/pseudonim</string>
    <string name="detalji">Detalji</string>

    <string name="search">Pretražite...</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_convict_locations_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pseudonim">Nadimak/ pseudonim:</string>

    <string name="adresa">Adresa</string>
    <string name="g_ro_enja">G. rođenja</string>
    <string name="fizi_ki_opis">Fizički opis</string>
    <string name="poslednje_a_uriranje">Poslednje ažuriranje</string>
    <string name="prijavi">Prijavi</string>
    <string name="lokacije">Lokacije</string>
    <string name="poslednja_lokacija">Poslednja lokacija</string>
    <string name="krivi_no_delo">Krivično delo</string>
    <string name="pol">Pol</string>
    <string name="gender">Pol</string>

    <!-- SETTINGS -->
    <string name="notifications">Obaveštenja</string>
    <string name="enable_notifications">Omogući obaveštenja</string>
    <string name="enable_notification_summary_on">Dobijajte obaveštenje svaki put kada se nađete u neposrednoj blizini lokacije na kojoj je nedavno viđen bivši osuđenik</string>
    <string name="enable_notification_summary_off">Ne primajte obaveštenja kada se nađete u neposrednoj blizini lokacije na kojoj je nedavno viđen bivši osuđenik</string>
    <string name="location">Lokacija</string>
    <string name="enable_location">Omogući praćenje lokacije</string>
    <string name="define_distance_radius">Definišite radijus udaljenosti</string>
    <string name="define_distance_radius_summary">Definišite radijus udaljenosti od lokacije gde je viđen osuđenik za koji želite da primate obaveštenja</string>
    <string name="synchronization">Sinhronizacija</string>
    <string name="define_synhronization_interval">Definišite interval sinhronizacije</string>
    <string name="radius">Radijus udaljenosti (u km)</string>
    <string name="city">Grad</string>
    <string name="radiusPrompt">Izaberite radijus </string>
    <string name="cancel">Ponisti </string>

    <string-array name="radius_values">
        <item>-</item>
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>

</resources>
