<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/convict_details_resume_layout"
            android:id="@+id/details_resume"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/adresa"
        android:layout_margin="5dp"
        ></TextView>
    <TextView
        android:id="@+id/convict_details_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:background="@color/cardview_light_background"
        android:layout_margin="5dp"
android:text="Neka adresa valfda "
        ></TextView>

</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/gender"
                android:layout_margin="5dp"
                ></TextView>
            <TextView
                android:id="@+id/convict_details_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:text="Muski"
                android:background="@color/cardview_light_background"

                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/g_ro_enja"
                android:layout_margin="5dp"
                android:layout_marginLeft="25dp"
                ></TextView>
            <TextView
                android:id="@+id/convict_details_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:background="@color/cardview_light_background"

                android:layout_margin="5dp"
android:text="1968."
                ></TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/krivi_no_delo"
                android:layout_margin="5dp"
                ></TextView>
            <TextView
                android:id="@+id/convict_details_crime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:background="@color/cardview_light_background"

                android:layout_margin="5dp"
android:text="silovanje"
                ></TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/fizi_ki_opis"
                android:layout_margin="5dp"
                ></TextView>

            <ScrollView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="90dip"
                android:layout_margin="5dp"
                >

                <TextView
                    android:id="@+id/convict_details_description"
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_light_background"

                    android:text="Ovo je neki teksd za probuf sfdfdsfdssdfffffffffffffffffffffffffffffff fdsfds"/>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/poslednja_lokacija"
                android:layout_margin="5dp"
                ></TextView>
            <TextView
                android:id="@+id/convict_details_last_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:background="@color/cardview_light_background"
                android:text="Neka lokacija na kojoj je vidjen"
                ></TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/poslednje_a_uriranje"
                android:layout_margin="5dp"
                ></TextView>
            <TextView
                android:id="@+id/convict_details_update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:background="@color/cardview_light_background"
                android:layout_margin="5dp"
                android:text="01.04.2020"
                ></TextView>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <Button
        android:id="@+id/btn_prijavi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/prijavi"
        android:padding="2dp"
        android:layout_margin="45dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_rectangle_blue"
        android:textSize="23sp" />

    <Button
        android:id="@+id/btn_sveLokacije"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rectangle_blue"
        android:text="@string/lokacije"
        android:textColor="@android:color/white"
        android:padding="2dp"
        android:layout_margin="45dp"
        android:textSize="23sp" />

    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
